--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -3,20 +3,17 @@
 }
 
 html {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: Cousine, 'Helvetica Neue', Helvetica, Arial, sans-serif;
     margin: 0;
     background-color: #111;
     color: #fff;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
+    font-size: 10px;
 }
 
 body {
     margin: 0;
-}
-
-h1 {
-    font-family: 'adv', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 #sidebar {
@@ -31,13 +28,23 @@ h1 {
     z-index: 100;
 }
 
+#sidebar label {
+    display: block;
+}
+
+#sidebar label em {
+    float: right;
+}
+
+.move-count {
+    text-align: right;
+}
+
 #sidebar input {
-    color: #eee;
-    background-color: rgba(255, 255, 255, .1);
-    border: 1px dashed #eee;
     width: 100%;
-    text-align: center;
-    font-size: 16px;
+    display: block;
+    margin: 1rem 0;
+    margin-bottom: 2rem;
 }
 
 .heads-up {
