--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1,84 +1,92 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
-    font-family: Cousine, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    margin: 0;
-    background-color: #111;
-    color: #fff;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    font-size: 10px;
+  font-family: Cousine, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  margin: 0;
+  background-color: #111;
+  color: #fff;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  font-size: 10px;
 }
 
 body {
-    margin: 0;
+  margin: 0;
 }
 
 #sidebar {
-    background-color: rgba(255, 255, 255, .5);
-    background-color: #fff;
-    color: #555;
-    padding: 10px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    box-sizing: content-box;
-    z-index: 100;
+  background-color: rgba(255, 255, 255, .5);
+  background-color: #fff;
+  color: #555;
+  padding: 10px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  box-sizing: content-box;
+  z-index: 100;
 }
 
 #sidebar label {
-    display: block;
+  display: block;
 }
 
 #sidebar label em {
-    float: right;
+  float: right;
 }
 
 .move-count {
-    text-align: right;
+  text-align: right;
 }
 
 #sidebar input {
-    width: 100%;
-    display: block;
-    margin: 1rem 0;
-    margin-bottom: 2rem;
+  width: 100%;
+  display: block;
+  margin: 1rem 0;
+  margin-bottom: 2rem;
 }
 
 .heads-up {
-    font-size: 90px;
-    font-weight: bold;
+  font-size: 90px;
+  font-weight: bold;
 }
 
 .grid {
-    width: 600px;
-    position: relative;
+  width: 600px;
+  position: relative;
+}
+
+.grid.show-nums label {
+  opacity: 1;
 }
 
 .cell {
-    background-color: #ccc;
-    color: #444;
-    line-height: 200px;
-    position: absolute;
-    display: inline-block;
-    transition: transform .2s;
-    overflow: hidden;
-}
-
-.cell img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    width: 300%;
+  position: absolute;
+  display: inline-block;
+  transition: transform .2s;
+  overflow: hidden;
+  text-align: center;
+  font-size: 24
 }
 
 .cell video {
-    position: absolute;
-    top: 0;
-    left: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.cell label {
+  color: #fff;
+  position: relative;
+  font-size: 5em;
+  opacity: 0;
+  pointer-events: none;
+  cursor: pointer;
+  transition: opacity .2s;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
 .cell.adjacent {
