--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -90,9 +90,77 @@ body {
 }
 
 .cell.adjacent {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-.cell.empty {
-    display: none;
+input[type='range'] {
+  width: 100%;
+  -webkit-appearance: none;
+}
+
+input[type='range']::-webkit-slider-thumb {
+  -webkit-appearance: none;
+}
+
+input[type='range']:focus {
+  outline: none;
+}
+
+input[type='range']::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 16px;
+  width: 16px;
+  border-radius: 100%;
+  border: 1px solid #bbb;
+  background: #fff;
+  cursor: pointer;
+  margin-top: -8px;
+}
+
+input[type='range']::-moz-range-thumb {
+  height: 16px;
+  width: 16px;
+  border-radius: 100%;
+  border: 1px solid #bbb;
+  background: #fff;
+  cursor: pointer;
+  margin-top: -8px;
+}
+
+input[type='range']::-ms-thumb {
+  height: 16px;
+  width: 16px;
+  border-radius: 100%;
+  border: 1px solid #bbb;
+  background: #fff;
+  cursor: pointer;
+  margin-top: -8px;
+}
+
+input[type='range']::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 1px;
+  cursor: pointer;
+  background: #bbb;
+}
+
+input[type='range']::-moz-range-track {
+  width: 100%;
+  height: 1px;
+  cursor: pointer;
+  background: #bbb;
+}
+
+input[type='range']::-ms-track {
+  width: 100%;
+  height: 1px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  border-width: 16px 0;
+  color: transparent;
+}
+
+input[type='range']::-ms-fill-lower {
+  background: #bbb;
 }
