--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -89,6 +89,7 @@ button.wait:hover {
   position: absolute;
   top: 50%;
   left: 50%;
+  -webkit-transform: translate3d(-50%, -50%, 0);
   transform: translate3d(-50%, -50%, 0);
   background-color: #333;
   padding: 4rem;
