--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -3,7 +3,7 @@
 }
 
 html {
-  font-family: Cousine, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: Cousine, monospace;
   margin: 0;
   background-color: #111;
   color: #fff;
@@ -19,13 +19,13 @@ body {
 ::-moz-selection {
   background: #444;
   color: #fff;
-  text-shadow: none
+  text-shadow: none;
 }
 
 ::selection{
   background: #444;
   color: #fff;
-  text-shadow: none
+  text-shadow: none;
 }
 
 a, a:visited {
@@ -49,7 +49,7 @@ a.download, a.download:hover {
 button {
   background-color: #444;
   border: none;
-  font-family: Cousine, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: Cousine, monospace;
   color: #fff;
   font-size: 2rem;
   padding: 1rem 2rem;
@@ -272,7 +272,12 @@ input[type='range']::-webkit-slider-thumb {
   border: 1px solid #bbb;
   background: #fff;
   cursor: ew-resize;
+  cursor: -webkit-grab;
   margin-top: -8px;
+}
+
+input[type='range']::-webkit-slider-thumb:active {
+  cursor: -webkit-grabbing;
 }
 
 input[type='range']::-moz-range-thumb {
@@ -298,8 +303,12 @@ input[type='range']::-ms-thumb {
 input[type='range']::-webkit-slider-runnable-track {
   width: 100%;
   height: 1px;
-  cursor: pointer;
+  cursor: -webkit-grab;
   background: #bbb;
+}
+
+input[type='range']::-webkit-slider-runnable-track:active {
+  cursor: -webkit-grabbing;
 }
 
 input[type='range']::-moz-range-track {
