--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 html {
   font-family: Cousine, monospace;
   margin: 0;
-  background-color: #111;
+  background-color: #292929;
   color: #fff;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -133,6 +133,7 @@ button.wait:hover {
 
 .modal img {
   margin-bottom: 3rem;
+  outline: 12px solid #fff;
 }
 
 .modal h1 {
